<resources>
    <string name="app_name">release_student_22_v3</string>
    <string name="give_up_paper">确定扔掉这张纸吗？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="undo_text">上一步</string>
    <string name="redo_text">下一步</string>
    <string name="delete">删除</string>
    <string name="bookmark">书签</string>
    <string name="directory">目录</string>
    <string name="save_cut_success">截图保存成功</string>
    <string name="cut_pic_sent">截图已发送</string>
    <string name="choose_value">选择值</string>
    <string name="copy">复制</string>
    <string name="fill_out_text_field">填充文本字段</string>
    <string name="please_select_school">选择您所在的学校</string>
    <string name="please_select_class">选择您所在的班级</string>
    <string name="next_step">下一步</string>
    <string name="last_step">上一步</string>
    <string name="please_select_identity">请选择您的用户身份</string>
    <string name="reconfirm_identity">请再次确认您选择的用户身份是否正确</string>
    <string name="info_school">学校：%1$s</string>
    <string name="info_class">班级：%1$s</string>
    <string name="info_name">姓名：%1$s</string>
    <string name="info_number">学号：%1$s</string>
    <string name="reconfim_prompt">选择“用户身份正确”，本设备将与该用户身份\n\n绑定，请确认无误后再进行操作</string>
    <string name="info_correct">用户身份正确</string>
    <string name="select_error">我选错了</string>
    <string name="bind_success">用户身份与设备绑定成功！</string>
    <string name="start_use">开始使用</string>
    <string name="book_price">￥%1$s</string>
    <!--loading -->
    <string name="text_staticLoading">正在加载数据....</string>
    <string name="text_connect_timeout">网络请求超时 ,刷新试试</string>
    <string name="text_error">服务器错误</string>
    <string name="text_no_netWork">没有连接网络</string>
    <string name="text_empty">没有内容</string>
    <string name="loading_study_data">正在准备学习资料，请耐心等待。。。</string>
    <string name="student_name">姓名</string>
    <string name="student_number">学号</string>
    <string name="loading_text">请稍候.....</string>
    <string name="load_error_text">网络连接失败，点击屏幕重试</string>

    <string name="down_file_progress">共%1$s本图书,正在下载第%2$s本,</string>

    <!-- 搜索课外书-->
    <string name="search_result_context">您搜索的关键词:\&#34;%1$s\&#034; 的结果</string>
    <string name="search_error_title">很抱歉,没有找到与\&#034;%1$s\&#034;相关的课外书</string>
    <string name="down_book_defult">该书尚未下载 ,现在开始下载 ?</string>
    <string name="down_book_error">该书下载失败 ,请重新下载?</string>
    <string name="down_audio_error">音频下载失败 ,请重新下载?</string>
    <string name="down_config_error">配置下载失败 ,请重新下载?</string>
    <string name="down_book_loading">图书下载中%1$s</string>
    <string name="down_audio_loading">音频下载中%1$s</string>
    <string name="down_config_loading">配置下载中%1$s</string>
    <string name="search">搜索</string>
    <item name="is_scale_size_tag" type="id" />
    <item name="is_scale_font_tag" type="id" />

    <string name="net_not_connection">网络异常</string>
    <string name="all_text">全部</string>
    <string name="textbook">课本</string>
    <string name="reference_book">辅导书</string>
    <string name="extra_book">课外书</string>
    <string name="text_correspond">只显示本校版本</string>
    <string name="text_filtrate">筛选</string>
    <string name="all_version">全部版本</string>
    <string name="school_version">学校版本</string>
    <string name="subject_text">科目 ：</string>
    <string name="version_text">版本 ：</string>
    <!--<string name="no_result_text">找到0本图书，请检查输入的关键词是否有误，或者重新调整关键词</string>-->
    <!--<string name="no_result_text">没有对应的图书</string>-->
    <string name="no_search_result_text">抱歉！没有找到与“（%1$s）”相关的图书，请重新调整关键词。</string>
    <string name="no_filtrate_result_text">抱歉！此类图书暂未上架，敬请期待！</string>
    <string name="favorite">收藏夹</string>
    <string name="cart">购物车</string>
    <string name="select_all">全选</string>
    <string name="cart_empty">购物车还空着呢</string>
    <string name="favorite_empty">收藏夹还空着呢</string>
    <string name="delete_favorite">取消收藏</string>
    <string name="confirm_pay">确认支付</string>
    <string name="order_goods_detail">订单商品详情 : </string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="nothing_to_checkout">您没有商品需要结算</string>
    <string name="no_history_record">无最近搜索记录</string>
    <string name="grade_text">年级</string>
    <string name="classify_text">分类</string>
    <string name="book_classify">图书分类</string>
    <string name="reset">重置</string>
    <string name="all_grade">全部年级</string>
    <string name="more">更多...</string>
    <string name="pay_success">支付成功</string>
    <string name="record_of_search">搜索历史</string>
    <string name="clear_record">清空历史记录</string>

    <string name="jump_to_net">当前没有网络,是否连接网络?</string>
    <string name="delete_note_fail">删除笔记失败</string>
    <string name="updata_note_fail">更新笔记失败</string>
    <string name="note_name_null">请填写笔记名称</string>
    <string name="add_note_fail">添加笔记失败</string>
    <string name="books_already_buy">您已经购买过该图书</string>
    <string name="books_already_add_car">已在购物车</string>
    <string name="books_already_add_car_2">该图书已在购物车中!</string>
    <string name="books_already_add_collection">已收藏</string>
    <string name="books_add_car_fail">添加到购物车失败</string>
    <string name="books_add_collection_fail">添加到收藏失败</string>
    <string name="books_request_details_fail">获取图书详情失败</string>
    <string name="books_request_order_fail">下单失败</string>
    <string name="books_request_recommended_fail">获取推荐图书失败</string>
    <string name="books_reader">阅读</string>
    <string name="books_add_car_success">添加到购物车成功</string>
    <string name="books_add_collection_success">添加到收藏成功</string>
    <string name="retry">重试</string>
    <string name="play_package">在书包打开</string>
    <string name="cancle_collection_book">确实要取消收藏%1$s这本书么？</string>
    <string name="cancle_collection_all_book">确实要取消收藏这%1$s本书么？</string>
    <string name="cancle_collection_fail">取消收藏失败</string>
    <string name="remove_car_all">确实要移除这本%1$s书么？</string>
    <string name="remove_car">确实要移除%1$s这本书么？</string>
    <string name="cancel_order_fail">取消订单失败</string>
    <string name="no_buy_book">你还没有购买课外书</string>
    <string name="input_seartch_context">请输入搜索内容</string>
    <string name="unbind_success">解绑成功</string>
    <string name="unbind_fail">解绑失败</string>
    <string name="get_zxing_fail">获取支付二维码失败,请稍后重试</string>
    <string name="get_order_fail">获取订单失败</string>
    <string name="remove_car_fail">移除购物车失败</string>
    <string name="book_details_text">图书详情</string>
    <string name="promotion_text">促销 :</string>
    <string name="manjian_text">满减</string>
    <string name="activity_time">有效期：%1$s-%2$s</string>
    <string name="look_more_promotion_activity">查看更多%1$s活动>></string>
    <string name="list_price">定价：￥%1$s</string>
    <string name="sale_price">销售价：￥%1$s</string>
    <string name="file_size_text">文件大小 :%1$s</string>
    <string name="publish_time">出版时间 :%1$s</string>
    <string name="author_text">作者 :%1$s</string>
    <string name="publisher_text">出版社 :%1$s</string>
    <string name="load_error_tost">网络连接失败,刷新试试</string>
    <string name="student">学生</string>

    <string name="str_task_content">任务内容</string>
    <string name="str_task_materials">学习资料</string>
    <string name="str_task_practice">任务练习</string>
    <string name="str_task_signature">家长签字</string>
    <string name="str_prev_student">上一个学生</string>
    <string name="str_next_student">下一个学生</string>
    <string name="str_task_materials_empty">该任务无学习资料</string>
    <string name="str_task_practice_empty">该任务无任务练习</string>
    <string name="str_select_practice">选择练习</string>
    <string name="str_next_practice">下一个练习</string>
    <string name="str_prev_practice">上一个练习</string>
    <string name="unable_sign_temporary">家长暂时无法签字</string>
    <string name="now_sign">现在签字</string>
    <string name="temporary_no_sign">暂不签字</string>
    <string name="is_finished_task">是否确认已经完成任务</string>
    <string name="parent_sign">家长签字</string>
    <string name="task_complete_time">完成时间：%1$s~%2$s</string>

    <string name="down_media_error">音频下载失败 ,请重新下载?</string>
    <string name="down_media_loading">语音包下载中%1$s</string>


    <string name="add2shopcart">加入购物车</string>
    <string name="add2favorite">加入收藏夹</string>
    <string name="read_online">在线试读</string>
    <string name="read_promptly">立即阅读</string>
    <string name="add2bookshelf">加入书架</string>
    <string name="already_in_bookshelf">已在书架</string>
    <string name="no_completed_task">您还没有已完成的任务！</string>
    <string name="no_uncomplete_task">您还没有未完成的任务！</string>
    <string name="get_task_failed">获取任务失败</string>
    <string name="task_chapter">所属教材章节：%1$s</string>
    <string name="task_title_prompt">今天的任务还没有完成，请尽快完成！</string>
    <string name="task_content">任务名称：%1$s</string>
    <string name="go_to_task">前往任务</string>
    <string name="I_knew">我已知晓</string>


    <string-array name="titles">
        <item>课本</item>
        <item>辅导书</item>
        <item>课外书</item>
        <item>笔记</item>
        <item>作业</item>
        <item>文件夹</item>
    </string-array>
    <string-array name="stages">
        <item>小学一年级</item>
        <item>小学二年级</item>
        <item>小学三年级</item>
        <item>小学四年级</item>
        <item>小学五年级</item>
        <item>小学六年级</item>
        <item>初中一年级</item>
        <item>初中二年级</item>
        <item>初中三年级</item>
        <item>高中一年级</item>
        <item>高中二年级</item>
        <item>高中三年级</item>
    </string-array>
    <string-array name="classifies">
        <item>全部分类</item>
        <item>小说</item>
        <item>文学</item>
        <item>青春文学</item>
        <item>传记</item>
        <item>音乐</item>
        <item>绘画</item>
        <item>书法</item>
        <item>艺术</item>
        <item>经济</item>
        <item>动漫</item>
        <item>历史</item>
    </string-array>
    <string-array name="subjects">
        <item>所有科目</item>
        <item>语文</item>
        <item>数学</item>
        <item>英语</item>
        <item>音乐</item>
        <item>体育</item>
        <item>品德社会</item>
        <item>科学</item>
        <item>综合实践</item>
        <item>信息技术</item>
    </string-array>
    <string-array name="versions">
        <item>所有版本</item>
        <item>人教版</item>
        <item>北京版</item>
        <item>北师大版</item>
        <item>冀教版</item>
        <item>苏教版</item>
        <item>青岛版</item>
        <item>沪教版</item>
        <item>西师大版</item>
        <item>浙教版</item>
    </string-array>
</resources>
