<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:background="@drawable/confirm_bg"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reconfirm_identity"
        android:textStyle="bold"
        android:layout_marginTop="42dp"
        android:textSize="22sp"
        android:textColor="@color/text_color_black"
        />
    <TextView
        android:id="@+id/info_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_school"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="42dp"
        android:textSize="20sp"
        android:textColor="@color/text_color_black"
        />
    <TextView
        android:id="@+id/info_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_class"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="42dp"
        android:textSize="20sp"
        android:textColor="@color/text_color_black"
        />
    <TextView
        android:id="@+id/info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_name"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="42dp"
        android:textSize="20sp"
        android:textColor="@color/text_color_black"
        />
    <TextView
        android:id="@+id/info_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_number"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="42dp"
        android:textSize="20sp"
        android:textColor="@color/text_color_black"
        />
    <TextView
        android:id="@+id/info_reconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="18sp"
        android:textColor="@color/text_color_black"
        android:background="@drawable/reconfirm_bg"
        android:text="@string/reconfim_prompt"
        android:visibility="gone"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="32dp"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/identity_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info_correct"
            android:layout_marginRight="58dp"
            android:background="@drawable/confirm_btn_selector"
            />
        <Button
            android:id="@+id/select_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_error"
            android:background="@drawable/confirm_btn_selector"
            />
    </LinearLayout>
</LinearLayout>