<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="activity"
            type="com.yougy.shop.activity.SearchActivity"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_color_white"
        android:clickable="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/grade_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_text" />

            <Spinner
                android:id="@+id/stage_spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/classify_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grade_layout"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/classify_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classify_text" />

            <TextView
                android:id="@+id/text_book_tv"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@+id/classify_tv"
                android:layout_marginTop="10dp"
                android:background="@drawable/classify_bg_selector"
                android:gravity="center"
                android:text="@string/textbook"
                android:onClick="@{activity.clickTextBookTv}"
                android:textColor="@drawable/classify_color_selector" />

            <TextView
                android:id="@+id/guide_book_tv"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/text_book_tv"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/text_book_tv"
                android:background="@drawable/classify_bg_selector"
                android:gravity="center"
                android:text="@string/reference_book"
                android:onClick="@{activity.clickGuideBookTv}"
                android:textColor="@drawable/classify_color_selector" />

            <TextView
                android:id="@+id/extra_book_tv"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/guide_book_tv"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/guide_book_tv"
                android:background="@drawable/classify_bg_selector"
                android:gravity="center"
                android:text="@string/extra_book"
                android:onClick="@{activity.clickExtraBookTv}"
                android:textColor="@drawable/classify_color_selector" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/subject_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/classify_layout"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_text" />

            <com.yougy.view.showView.AutoWrapLineLayout
                android:id="@+id/subject_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/version_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subject_layout"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_text" />

            <com.yougy.view.showView.AutoWrapLineLayout
                android:id="@+id/version_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reset_tv"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{activity.reset}"
                android:text="@string/reset" />

            <TextView
                android:id="@+id/confirm_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{activity.confirm}"
                android:text="@string/confirm" />
        </LinearLayout>
    </RelativeLayout>
</layout>